<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/add_group_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/formTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_task_layout_title"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/formDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_task_layout_description"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <Button
        android:id="@+id/formCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/formConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>